# data-talks

./: .dockerignore  .env  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  LICENSE  Makefile  README.md  TASKS.md  create-datasource-issues.sh  create-issues.ps1  create-issues.sh  eslint.config.js  index.html  new.py  package-lock.json  package.json  railway.toml  start.bat  tailwind.config.ts  vite.config.ts  vitest.config.ts
backend/: .env.example  CLAUDE.md  README.md  alembic.ini  data_talks.db  pyproject.toml  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0813fd373e14_telegram_integration.py  20250216000000_add_litellm_to_llm_settings.py  20250216100000_add_platform_logs.py  20250216110000_add_source_to_platform_logs.py  20250216120000_add_trace_to_platform_logs.py  20250216200000_add_llm_configs.py  20250216300000_add_llm_config_is_default.py  20250606000000_initial_sqlite_postgres.py  20260306140000_add_audio_overviews_and_audio_models.py  20260309120000_add_openai_base_url_to_llm_tables.py  20260310110000_add_agent_source_relationships.py  20260311120000_add_api_keys_table.py  20260313120000_add_audit_trail_tables.py  20260316120000_add_alert_system_tables.py  20260318120000_add_google_anthropic_to_llm_tables.py  20260319120000_add_report_template_tables.py  20260407120000_add_medallion_tables.py  20260407130000_add_claude_code_provider_columns.py  20260411120000_add_lineage_and_versioning_tables.py  20260413120000_add_multi_tenant_tables.py  20260413130000_encrypt_existing_secrets.py  20260414120000_add_org_id_to_remaining_models.py  (+6 more)
backend/app/: __init__.py  audit.py  audit_middleware.py  auth.py  cli.py  config.py  database.py  main.py  mcp_server.py  models.py  schemas.py  slack_bot.py  telegram_bot.py  whatsapp_bot.py
backend/tests/: conftest.py  test_auth_api.py  test_auth_utils.py  test_automl.py  test_crypto.py  test_generated_query.py  test_health.py  test_lineage.py  test_pipeline_versioning.py  test_schemas.py  test_storage.py  test_tenancy.py  test_tenancy_lint.py
src/: App.tsx  (+3 more)
(+384 files in other folders)
